# FlightPhotoMapper

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  exporter.py  flightphotomapper.spec  geotagger.py  image_discovery.py  main.py  pyproject.toml  releasenotes.md  server.py
docs/: index.html
scripts/: build_exe.bat
src/gpsimagestomap/: app_config.py  exporter.py  geotagger.py  image_discovery.py  launcher.py  main.py  server.py  storage.py  track_parser.py
src/gpsimagestomap/templates/: map.html
templates/: map.html
tests/: test_integration_geotag.py  test_main.py  test_server_show_mode.py
