[project]
name = "flightphotomapper"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "flask>=3.1.3",
    "gpxpy>=1.6.2",
    "piexif>=1.1.3",
    "pillow>=12.2.0",
    "pillow-heif>=1.3.0",
]

[project.scripts]
flightphotomapper = "gpsimagestomap.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gpsimagestomap"]

[dependency-groups]
dev = [
    "pyinstaller>=6.0.0",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "ruff>=0.14.0",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
